# gameoflife

./: Cargo.toml  Makefile
benches/: bench.rs
gol/: Cargo.toml
gol/benches/: bench.rs
gol/src/: lib.rs  map.rs
jslife/: readme-osc.txt  readme.txt
jslife/applications/: 1-per-gen.lif  caber2.rle  compute-pi.rle  diagpuf-breeder.rle  grow-t13.rle  hotel2.rle  hotel3.rle  loggrow-corder.lif  moving-sawtooth.rle  pi-blink-breeder1.rle  pi-blink-breeder2.rle  primes2.lif  primes3.rle  pufferlessbreeder2.lif  rake-puff.lif  sawtooth-pop262.lif  sawtooth6.rle  twinprimes.lif  unit110cell.rle
jslife/c2-extended/: c2-0002.rle  c2-0004.rle  c2-0006.rle  c2-0008-puf.lif  c2-0008-ss.lif  c2-0010.lif  c2-0010p.lif  c2-0012.lif  c2-0014.rle  c2-0014p.lif  c2-0016.lif  c2-0018.rle  c2-0022.lif  c2-0024.rle  c2-0026.lif  c2-0030.rle  c2-0032.lif  c2-0034.lif  c2-0036.rle  c2-0038.lif  c2-0040.lif  c2-0042.lif  c2-0044.rle  c2-0046.rle  c2-0050.lif  c2-0052.lif  c2-0054.rle  c2-0056.rle  c2-0058.lif  c2-0062.lif  c2-0064.rle  c2-0070.rle  c2-0076.rle  c2-0078.rle  c2-0080.rle  c2-0090.rle  c2-0094.lif  c2-0096.lif  c2-0098.rle  c2-0100.rle  (+28 more)
jslife/fuses/: 1803278.rle  2000000.rle  2020202.lif  2500000.lif  3000000.rle  3529411.rle  3703703.lif  3777777.lif  3809523.lif  4166666.lif  4285714.lif  4347826.lif  4583333.rle  4615384.lif  5000000.rle  5333333.lif  6000000.lif  6666666.rle  6923076.lif  7142857.rle  7500000.rle  8000000.rle  8750000.lif  9999999.rle  d-0937500.lif  d-2500000.rle  d-3333333.lif  d-5000000.lif  d-9999999.lif  s-2911392.rle  s-3770491.lif  s-4193548.lif  s-4444444.rle  s-6666666.lif  s-9999999.rle
jslife/guns/: edgeshoot-p450.rle  gun-corder-p690.rle  gun-p133.rle  gun-p135.rle  gun-p150.rle  gun-p165mwss.rle  gun-p180.lif  gun-p22p.rle  gun-p432.rle  gun-p570.rle  sidecargun.lif
jslife/interactions/: barbershop.lif  bee-ladder.lif  blockstacker.lif  bricklayer.rle  fuse-obliq-p60.lif  grow-rake-lwss.rle  grow-ss-10c23.lif  grow-ss-3c7.rle  grow-ss-c5.rle  lmpush.lif  (+15 more)
relm-frontend/: Cargo.toml
relm-frontend/src/: main.rs  rle.rs  view.rs
relm-frontend/src/life_reader/: rle.rs
relm-frontend/src/view/: mod.rs
rle/: Cargo.toml
src/: lib.rs  main.rs  map.rs  view.rs
(+490 files in other folders)
