[package]
name = "gameoflife"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]

[dependencies]
relm = "0.10.1"
relm-derive = "0.10.0"
cairo-rs = "0.2.0"
gdk = "0.6.0"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
chrono = "0.4.0"
futures-glib = "0.2.1"

[dependencies.gtk]
version = "0.2.0"
features = ["v3_16"]
