[package]
name = "gameoflife"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]

[dependencies]
relm = "0.11"
relm-derive = "0.11"
cairo-rs = "0.3"
gdk = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
futures-glib = "0.3"
regex = "0.2"
lazy_static = "1.0"

[dependencies.gtk]
version = "0.3"
features = ["v3_10"]
