[package]
name = "relm-frontend"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]
edition = "2018"

[dependencies]
relm = "0.11"
relm-derive = "0.11"
cairo-rs = "0.3"
gdk = "0.7"
futures-glib = "0.3"
gol = { path = "../gol" }
rle = { path = "../rle" }
dirs = "1"

[dependencies.gtk]
version = "0.3"
features = ["v3_10"]
