[package]
name = "relm-frontend"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]
edition = "2018"

[dependencies]
relm = "0.15"
relm-derive = "0.15"
cairo-rs = "0.5"
gdk = "0.9"
gol = { path = "../gol" }
rle = { path = "../rle" }
dirs = "1"

[dependencies.gtk]
version = "0.5"
features = ["v3_10"]
