[package]
name = "relm-frontend"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]
edition = "2018"

[dependencies]
relm = "0.16"
relm-derive = "0.16"
cairo-rs = "0.6"
gdk = "0.10"
gol = { path = "../gol" }
rle = { path = "../rle" }
dirs = "1"

[dependencies.gtk]
version = "0.6"
features = ["v3_16"]
